Passed limit and page as parameters for getProducts function

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "start:dev": "nodemon --inspect=0.0.0.0:9229 index.js",
     "test": "jest --watchAll --colors --verbose",
     "lint:js": "eslint .",
-    "prettier:check": "prettier --check '**/*.js'"
+    "prettier:check": "prettier --check '**/*.js'",
+    "prettier:write": "prettier --write '**/*.js'"
   },
   "author": "DI",
   "license": "ISC",
