--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,6 @@ PGHOST=db
 PGUSER=postgres
 PGPASSWORD=password
 PGPORT=5432
-AUTH0_AUDIENCE=
-AUTH0_ISSUER_BASE_URL=
+AUTH0_AUDIENCE=https://catcouture.com
+AUTH0_ISSUER_BASE_URL=https://dev-8r4cuew5h4u0t6ck.us.auth0.com/
+AUTH0_SCOPE=read:reports
