--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_URL=http://localhost:5001/api
-REACT_APP_AUTH0_DOMAIN=
-REACT_APP_AUTH0_CLIENT_ID=
-REACT_APP_AUTH0_AUDIENCE=
+REACT_APP_AUTH0_DOMAIN=dev-8r4cuew5h4u0t6ck.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=69kMxldVdwuCvssHacD3NecCWSGPa9XW
+REACT_APP_AUTH0_AUDIENCE=https://catcouture.com
